<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HealthRecord">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/bloodSugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/blood_sugar"/>

            <EditText
                android:id="@+id/bloodPressure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/blood_pressure"/>

            <EditText
                android:id="@+id/bloodCholestrol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/blood_cholestrol"/>

            <EditText
                android:id="@+id/bloodLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/blood_level"/>


            <EditText
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight"/>

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"/>


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>