<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="56dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:orientation="vertical">



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstNameInputField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:hint="Firstname"
            android:layout_margin="10dp"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastNameInputField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:hint="LastName"
            android:layout_margin="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNumberInputField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone"
            android:hint="@string/phonenumber"
            android:layout_margin="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Spinner
        android:id="@+id/subscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/snipper_subscription"
        android:entries="@array/subscription"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:layout_marginStart="5dp"
        android:spinnerMode="dropdown"
        android:layout_margin="10dp"/>


    <Spinner
        android:id="@+id/package_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/package_prompt"
        android:background="@drawable/blue_outline"
        android:spinnerMode="dropdown"
        android:layout_margin="10dp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/subscriptionButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:textColor="#FFFFFF"
        android:text="Subscribe"
        android:background="@color/secondaryColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.562" />


</LinearLayout>